--- a/vpbv1.html
+++ b/vpbv1.html
@@ -149,7 +149,7 @@ h1.hidden {
 			<tr><input type="number" class="type-1" name="number" id="number" placeholder="Mobile number" required=""></tr>
 			<tr><input type="number" class="type-1" name="age" id="age" placeholder="Age" required=""></tr>
 			</form></table>
-			<button  id="send" onclick="sendmail()" class="btn"><i class="fa fa-email"></i> Send Mail </button>
+			<button  id="send" onclick="sendmail()" class="btn"><i class="fa fa-email"></i> SEND IT </button>
 		</div>
 		<div id="loader">
 			<div class="loader"></div>
