--- a/vpbv1.html
+++ b/vpbv1.html
@@ -15,6 +15,13 @@ margin-top: 20px;
   font-size: 20px;
   font-family: Arial;
 }
+.message {
+margin-top: 20px;
+  font-weight: bold;
+  color: black;
+  font-size: 20px;
+  font-family: Arial;
+}
 h2 {
 margin-top: 20px;
   font-weight: bold;
