--- a/vpbv1.html
+++ b/vpbv1.html
@@ -15,7 +15,7 @@ margin-top: 20px;
   font-size: 20px;
   font-family: Arial;
 }
-.message {
+#message {
 margin-top: 20px;
   font-weight: bold;
   color: black;
@@ -63,7 +63,7 @@ background-color: black;
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-margin-top:20%;
+margin-top:40%;
   border-top: 16px solid black;
   width: 120px;
   height: 120px;
@@ -327,7 +327,7 @@ h1.hidden {
 			ct.style.display="block"
 			canvas1.style.display="none"
 			var msg= document.getElementById("message");
-			msg.innerHTML = "Will email it to you on the sopt"
+			msg.innerHTML = "Will email it to you on the spot"
 			}
 		
 		function sendmail(){
